[gd_scene load_steps=5 format=3 uid="uid://csq431aveeuv"]

[ext_resource type="Script" path="res://scenes/main/game/game.gd" id="1_eo2d0"]
[ext_resource type="PackedScene" uid="uid://cbi6cvfbkhdgt" path="res://scenes/items/center/center.tscn" id="2_os3pg"]
[ext_resource type="PackedScene" uid="uid://durfx8ipfgjuh" path="res://scenes/items/sword/sword.tscn" id="3_tirux"]
[ext_resource type="Script" path="res://scenes/main/game/sword_handler.gd" id="4_s0arl"]

[node name="game" type="Node2D" node_paths=PackedStringArray("sword_handler")]
script = ExtResource("1_eo2d0")
sword_handler = NodePath("sword_handler")
current_level = 1

[node name="LevelTimer" type="Timer" parent="."]

[node name="center" parent="." instance=ExtResource("2_os3pg")]

[node name="sword_handler" type="Node2D" parent="."]
position = Vector2(324, 928)
script = ExtResource("4_s0arl")
sword_scene_path = "res://scenes/items/sword/sword.tscn"

[node name="sword" parent="sword_handler" instance=ExtResource("3_tirux")]

[node name="label_knives" type="Label" parent="."]
offset_left = 324.0
offset_top = 60.0
offset_right = 364.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 50
text = "1"

[connection signal="timeout" from="LevelTimer" to="." method="_on_level_timer_timeout"]
